Fixed wrong padding in install

--- a/symphony/assets/css/src/installer.less
+++ b/symphony/assets/css/src/installer.less
@@ -22,10 +22,6 @@ form {
 	margin: 0 auto;
 	padding: var(--spacing-smallish) var(--spacing-smallish) var(--spacing-mid);
 	max-width: 90rem;
-
-	@media (min-width: @sm){
-		padding-left: var(--spacing-huge);
-	}
 }
 
 /*-----------------------------------------------------------------------------
